@@ -135,6 +135,9 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1326641.info \
   ATLAS_2014_I1327229.info \
   ATLAS_2015_I1387176.info \
+  ATLAS_2015_CONF_2015_041.info \
+  ATLAS_2015_CONF_2015_041_EL.info \
+  ATLAS_2015_CONF_2015_041_MU.info \
   BABAR_2003_I593379.info \
   BABAR_2005_S6181155.info \
   BABAR_2007_S6895344.info \
