@@ -1,0 +1,31 @@
+# BEGIN PLOT /ATLAS_2015_CONF_2015_041_MU/d..
+XTwosidedTicks=1
+YTwosidedTicks=1
+LeftMargin=1.5
+XMinorTickMarks=0
+XLabel=$N_\text{jets}$
+LegendYPos=0.9
+LegendXPos=0.6
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2015_CONF_2015_041_MU/d01
+LogY=1
+YLabel=$\sigma(Z + N_\text{jets})$ [pb]
+XCustomMajorTicks=0.5	$\geq 0$	1.5	$\geq 1$	2.5	$\geq 2$	3.5	$\geq 3$	4.5	$\geq 4$
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2015_CONF_2015_041_MU/d02
+LogY=0
+YLabel=$\sigma(Z + N_\text{jets}+1) / \sigma(Z + N_\text{jets})$
+XCustomMajorTicks=1.5	$\geq 1 /\geq 0$	2.5	$\geq 2 /\geq 1$	3.5	$\geq 3 /\geq 2$	4.5	$\geq 4 /\geq 3$
+LegendYPos=0.3
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2015_CONF_2015_041_MU/d..-x01
+Title=$Z \rightarrow e^+ e^-$, dressed level
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2015_CONF_2015_041_MU/d..-x02
+Title=$Z \rightarrow \ell^+ \ell^-$, dressed level
+# END PLOT
+
