@@ -132,6 +132,9 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1326641.plot \
   ATLAS_2014_I1327229.plot \
   ATLAS_2015_I1387176.plot \
+  ATLAS_2015_CONF_2015_041.plot \
+  ATLAS_2015_CONF_2015_041_EL.plot \
+  ATLAS_2015_CONF_2015_041_MU.plot \
   BABAR_2003_I593379.plot \
   BABAR_2005_S6181155.plot \
   BABAR_2007_S6895344.plot \
