@@ -1,0 +1,46 @@
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2015_CONF_2015_041/d01-x01-y01
+Path=/REF/ATLAS_2015_CONF_2015_041/d01-x01-y01
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+5.000000e-01	5.000000e-01	5.000000e-01	7.267400e+02	6.736000e+01	6.736000e+01
+1.500000e+00	5.000000e-01	5.000000e-01	1.141700e+02	1.144000e+01	1.144000e+01
+2.500000e+00	5.000000e-01	5.000000e-01	2.662000e+01	2.850000e+00	2.850000e+00
+3.500000e+00	5.000000e-01	5.000000e-01	5.750000e+00	6.800000e-01	6.800000e-01
+4.500000e+00	5.000000e-01	5.000000e-01	1.370000e+00	2.200000e-01	2.200000e-01
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2015_CONF_2015_041/d01-x02-y01
+Path=/REF/ATLAS_2015_CONF_2015_041/d01-x02-y01
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+5.000000e-01	5.000000e-01	5.000000e-01	7.275200e+02	7.330000e+01	7.330000e+01
+1.500000e+00	5.000000e-01	5.000000e-01	1.124100e+02	1.337000e+01	1.337000e+01
+2.500000e+00	5.000000e-01	5.000000e-01	2.594000e+01	3.590000e+00	3.590000e+00
+3.500000e+00	5.000000e-01	5.000000e-01	5.990000e+00	8.900000e-01	8.900000e-01
+4.500000e+00	5.000000e-01	5.000000e-01	1.780000e+00	4.300000e-01	4.300000e-01
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2015_CONF_2015_041/d02-x01-y01
+Path=/REF/ATLAS_2015_CONF_2015_041/d02-x01-y01
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+1.500000e+00	5.000000e-01	5.000000e-01	1.580000e-01	6.000000e-03	6.000000e-03
+2.500000e+00	5.000000e-01	5.000000e-01	2.330000e-01	7.000000e-03	7.000000e-03
+3.500000e+00	5.000000e-01	5.000000e-01	2.170000e-01	1.100000e-02	1.100000e-02
+4.500000e+00	5.000000e-01	5.000000e-01	2.400000e-01	2.800000e-02	2.800000e-02
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2015_CONF_2015_041/d02-x02-y01
+Path=/REF/ATLAS_2015_CONF_2015_041/d02-x02-y01
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+1.500000e+00	5.000000e-01	5.000000e-01	1.550000e-01	7.000000e-03	7.000000e-03
+2.500000e+00	5.000000e-01	5.000000e-01	2.310000e-01	9.000000e-03	9.000000e-03
+3.500000e+00	5.000000e-01	5.000000e-01	2.310000e-01	1.700000e-02	1.700000e-02
+4.500000e+00	5.000000e-01	5.000000e-01	2.980000e-01	3.800000e-02	3.800000e-02
+# END YODA_SCATTER2D
+
