@@ -1,0 +1,46 @@
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2015_CONF_2015_041_MU/d01-x01-y02
+Path=/REF/ATLAS_2015_CONF_2015_041_MU/d01-x01-y02
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+5.000000e-01	5.000000e-01	5.000000e-01	7.267400e+02	6.736000e+01	6.736000e+01
+1.500000e+00	5.000000e-01	5.000000e-01	1.141700e+02	1.144000e+01	1.144000e+01
+2.500000e+00	5.000000e-01	5.000000e-01	2.662000e+01	2.850000e+00	2.850000e+00
+3.500000e+00	5.000000e-01	5.000000e-01	5.750000e+00	6.800000e-01	6.800000e-01
+4.500000e+00	5.000000e-01	5.000000e-01	1.370000e+00	2.200000e-01	2.200000e-01
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2015_CONF_2015_041_MU/d01-x02-y02
+Path=/REF/ATLAS_2015_CONF_2015_041_MU/d01-x02-y02
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+5.000000e-01	5.000000e-01	5.000000e-01	2.815000e+01	6.766000e+01	6.766000e+01
+1.500000e+00	5.000000e-01	5.000000e-01	1.420000e+01	1.238000e+01	1.238000e+01
+2.500000e+00	5.000000e-01	5.000000e-01	6.720000e+00	3.340000e+00	3.340000e+00
+3.500000e+00	5.000000e-01	5.000000e-01	4.600000e-01	8.900000e-01	8.900000e-01
+4.500000e+00	5.000000e-01	5.000000e-01	9.900000e-01	2.800000e-01	2.800000e-01
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2015_CONF_2015_041_MU/d02-x01-y02
+Path=/REF/ATLAS_2015_CONF_2015_041_MU/d02-x01-y02
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+1.500000e+00	5.000000e-01	5.000000e-01	1.580000e-01	6.000000e-03	6.000000e-03
+2.500000e+00	5.000000e-01	5.000000e-01	2.330000e-01	7.000000e-03	7.000000e-03
+3.500000e+00	5.000000e-01	5.000000e-01	2.170000e-01	1.100000e-02	1.100000e-02
+4.500000e+00	5.000000e-01	5.000000e-01	2.400000e-01	2.800000e-02	2.800000e-02
+# END YODA_SCATTER2D
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2015_CONF_2015_041_MU/d02-x02-y02
+Path=/REF/ATLAS_2015_CONF_2015_041_MU/d02-x02-y02
+Title=
+Type=Scatter2D
+# xval	 xerr-	 xerr+	 yval	 yerr-	 yerr+
+1.500000e+00	5.000000e-01	5.000000e-01	1.570000e-01	8.000000e-03	8.000000e-03
+2.500000e+00	5.000000e-01	5.000000e-01	2.340000e-01	7.000000e-03	7.000000e-03
+3.500000e+00	5.000000e-01	5.000000e-01	2.040000e-01	1.300000e-02	1.300000e-02
+4.500000e+00	5.000000e-01	5.000000e-01	1.820000e-01	2.900000e-02	2.900000e-02
+# END YODA_SCATTER2D
+
