@@ -112,6 +112,9 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1319490_MU.yoda \
   ATLAS_2014_I1326641.yoda \
   ATLAS_2015_I1387176.yoda \
+  ATLAS_2015_CONF_2015_041.yoda \
+  ATLAS_2015_CONF_2015_041_EL.yoda \
+  ATLAS_2015_CONF_2015_041_MU.yoda \
   BABAR_2003_I593379.yoda \
   BABAR_2005_S6181155.yoda \
   BABAR_2006_S6511112.yoda \
