@@ -137,7 +137,8 @@ RivetATLASAnalyses_la_SOURCES = \
     ATLAS_2015_I1387176.cc
 if ENABLE_PRELIMINARY
 RivetATLASAnalyses_la_SOURCES += \
-    ATLAS_2012_CONF_2012_001.cc
+    ATLAS_2012_CONF_2012_001.cc \
+    ATLAS_2015_CONF_2015_041.cc
 endif
 if ENABLE_OBSOLETE
 RivetATLASAnalyses_la_SOURCES += \
